--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,8 +7,18 @@ rules:
         - init
         - options
         - closeStream
+        - execute
+        - executeCommand
+        - executeShell
+        - resizeTerm
   no-unused-vars:
     - warn
   no-shadow:
     - warn
-    
+  semi:
+    - off
+  padded-blocks:
+    - off
+  comma-dangle:
+    - off
+      
