--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "commander": "^2.11.0",
     "crypto": "^1.0.1",
     "dockerode": "^2.5.0",
-    "ssh2": "^0.5.5"
+    "ssh2": "^0.5.5",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
